[package]
name = "filecoin-proofs-api"
version = "6.0.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nilfoundation/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
serde = "1.0.104"

filecoin-proofs-v1 = { package = "filecoin-proofs", path = "../rust-fil-proofs/filecoin-proofs", default-features = false, features = ["gpu"] }
filecoin-hashers = { package = "filecoin-hashers", path = "../rust-fil-proofs/filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
storage-proofs-core = { package = "storage-proofs-core", path = "../rust-fil-proofs/storage-proofs-core", default-features = false, features = ["gpu"] }
fr32 = { package = "fr32", path = "../rust-fil-proofs/fr32", default-features = false, features = ["gpu"] }
bellperson = { path = "../fil-zk", default-features = false, features = ["gpu"]}


[features]
default = ["blst", "gpu"]
gpu = ["bellperson/gpu", "filecoin-proofs-v1/gpu"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst"]
