[package]
name = "filecoin-proofs-api"
version = "8.0.1"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nilfoundation/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
serde = "1.0.104"
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/ramin-raeisi/ev-rust-fil-proofs.git", branch = "master", default-features = false, features = ["gpu"] }
storage-proofs-core = { package = "storage-proofs-core", git = "https://github.com/ramin-raeisi/ev-rust-fil-proofs.git", branch = "master", default-features = false, features = ["gpu"] }
fr32 = { package = "fr32", git = "https://github.com/ramin-raeisi/ev-rust-fil-proofs.git", default-features = false, branch = "master", features = ["gpu"] }
filecoin-hashers = { package = "filecoin-hashers", git = "https://github.com/ramin-raeisi/ev-rust-fil-proofs.git", branch = "master", default-features = false, features = ["poseidon", "sha256"] }
bellperson = { git = "https://github.com/ramin-raeisi/ev-fil-zk.git", branch = "master", default-features = false, features = ["gpu"] }

[features]
default = ["blst", "gpu"]
gpu = ["bellperson/gpu", "filecoin-proofs-v1/gpu"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst"]